Alterando o estilo das classes nome, hexa e rgba

--- a/public/section-18/styles.css
+++ b/public/section-18/styles.css
@@ -21,4 +21,15 @@ h2 {
   color: #e7c944;
 }
 
+/* Cores */
+.nome {
+  color: orange;
+}
 
+.hexa {
+  color: #6a40c4;
+}
+
+.rgba {
+  color: rgba(17, 197, 214, 1);
+}
