--- a/public/section-18/styles.css
+++ b/public/section-18/styles.css
@@ -41,10 +41,25 @@ h2 {
   background-position: center;
   background-size: cover;
   height: 300px;
+  margin-bottom: 30px;
 }
 
 .div-background h1 {
   text-align: center;
   background-color: #e2dbd3;
   color: #fff;
+}
+
+.btn a {
+  text-decoration: none;
+  background-color:#81f094;
+  border: 1px solid #69db7c;
+  color: #fff;
+  padding: 10px 14px;
+}
+
+.btn a:hover {
+  background-color: #fff;
+  border: 1px solid #69db7c;
+  color: #69db7c;
 }
