--- a/public/section-18/styles.css
+++ b/public/section-18/styles.css
@@ -156,3 +156,15 @@ h2 {
   color: #B3A92B;
   margin-top: 25px;
 }
+
+/* Positions */
+.div-position {
+  width: 200px;
+  height: 200px;
+  background-color: #15797A;
+  margin: 20px;
+}
+
+.static {
+  position: static; /* posição padrão */
+}
