--- a/public/section-18/styles.css
+++ b/public/section-18/styles.css
@@ -197,3 +197,9 @@ h2 {
   right: 0;
   height: 200px;
 }
+
+.sticky {
+  background-color: rgb(60, 180, 255);
+  position: sticky;
+  top: 50px;
+}
