--- a/public/section-18/styles.css
+++ b/public/section-18/styles.css
@@ -275,3 +275,13 @@ h2 {
   background-color: rgb(190, 255, 150);
 }
 
+.main-em {
+  font-size: 50px;
+}
+
+.em-1 {
+  width: .5em;
+  height: .5em;
+  background-color: rgb(60, 220, 120);
+}
+
