Deixando o projeto responsivo

--- a/public/section-19/css/styles.css
+++ b/public/section-19/css/styles.css
@@ -121,3 +121,51 @@
     border-color: #00AD5E;
     color: #00AD5E;
 }
+
+/* Responsivo */
+@media(max-width: 450px) {
+    
+    #main-container {
+        height: 100%;
+        flex-wrap: wrap;
+    }
+
+    #address-container,
+    #form-container {
+        flex: 1 1 100%;
+    }
+
+    #form-container {
+        order: -1;
+        padding: 20px;
+    }
+
+    #form-container h2 {
+        margin-bottom: 25px;
+    }
+
+    #contact-form {
+        width: 100%;
+    }
+
+    #contact-form input,
+    #contact-form label,
+    #contact-form textarea {
+        border-color: #AAA;
+    }
+
+    #address-container {
+        background-position: 0;
+        height: 500px;
+    }
+
+    .fade {
+        opacity: .9;
+    }
+
+    #address-content {
+        left: 25%;
+        top: 25%;
+    }
+
+}
